--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+
 body {
   background-color: whitesmoke;
   margin: 0;
   padding: 0;
-  background-color: #17a2b8;
+
   height: 100vh;
+}
+.textwhite {
+  color: white;
 }
 
 .todo-list {
   background-color: white;
   margin: auto;
-  width: 50%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,15 +27,20 @@ body {
     /* The third layer shadow */ 0 20px 1px -9px rgba(0, 0, 0, 0.15);
   padding: 30px;
 }
+.photo {
+  height: 200px;
+  width: 200px;
+}
 
 .todo-item {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
-  padding: 30px 20px 0;
-  width: 70%;
+  /* padding: 30px 20px 0; */
+  width: 80%;
   border-bottom: 1px solid #cecece;
-  font-family: Roboto, sans-serif;
+  font-family: "Pacifico", cursive;
+  /* Roboto, sans-serif; */
   font-weight: 100;
   font-size: 15px;
   color: #333333;
@@ -63,4 +73,17 @@ input[type="checkbox"]:focus {
   #login-form
   #register-link {
   margin-top: -85px;
+}
+@media only screen and (max-width: 600px) {
+  /* body {
+    background-color: rgb(241, 241, 247);
+  } */
+  .todo-list {
+    background-color: white;
+    margin: auto;
+    width: 80%;
+  }
+  .row {
+    padding: none;
+  }
 }
