--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,8 @@ body {
 .todo-list {
   background-color: white;
   margin: auto;
-  width: 80%;
+  // width: 80%;
+  // font-family: "Pacifico", cursive;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,7 +38,7 @@ body {
   justify-content: flex-end;
   align-items: center;
   /* padding: 30px 20px 0; */
-  width: 80%;
+  // width: 100%;
   border-bottom: 1px solid #cecece;
   font-family: "Pacifico", cursive;
   /* Roboto, sans-serif; */
@@ -74,145 +75,149 @@ input[type="checkbox"]:focus {
   #register-link {
   margin-top: -85px;
 }
-
-@mixin mq($args...) {
-  $media-type: "only screen";
-  $media-type-key: "media-type";
-  $args: keywords($args);
-  $expr: "";
-
-  @if map-has-key($args, $media-type-key) {
-    $media-type: map-get($args, $media-type-key);
-    $args: map-remove($args, $media-type-key);
-  }
-
-  @each $key, $value in $args {
-    @if $value {
-      $expr: "#{$expr} and (#{$key}: #{$value})";
-    }
-  }
+div.row {
+  align-items:center;
+  min-width: 250px;
+  font-family: "Pacifico", cursive;
 }
-// --- iphone6 -----------------------------------------------------------------
+// @mixin mq($args...) {
+//   $media-type: "only screen";
+//   $media-type-key: "media-type";
+//   $args: keywords($args);
+//   $expr: "";
 
-@mixin iphone6($orientation: false) {
-  $min: 375px;
-  $max: 667px;
-  $pixel-ratio: 2;
+//   @if map-has-key($args, $media-type-key) {
+//     $media-type: map-get($args, $media-type-key);
+//     $args: map-remove($args, $media-type-key);
+//   }
 
-  @include mq(
-    $min-device-width: $min,
-    $max-device-width: $max,
-    $orientation: $orientation,
-    $-webkit-device-pixel-ratio: $pixel-ratio
-  ) {
-    .todo-list {
-      background-color: white;
-      margin: auto;
-      width: 80%;
-    }
-    .row {
-      padding: none;
-    }
-  }
-}
+//   @each $key, $value in $args {
+//     @if $value {
+//       $expr: "#{$expr} and (#{$key}: #{$value})";
+//     }
+//   }
+// }
+// // --- iphone6 -----------------------------------------------------------------
 
-// --- iphone6 plus ------------------------------------------------------------
+// @mixin iphone6($orientation: false) {
+//   $min: 375px;
+//   $max: 667px;
+//   $pixel-ratio: 2;
 
-@mixin iphone6-plus($orientation: false) {
-  $min: 414px;
-  $max: 736px;
-  $pixel-ratio: 3;
+//   @include mq(
+//     $min-device-width: $min,
+//     $max-device-width: $max,
+//     $orientation: $orientation,
+//     $-webkit-device-pixel-ratio: $pixel-ratio
+//   ) {
+//     .todo-list {
+//       background-color: white;
+//       margin: auto;
+//       width: 80%;
+//     }
+//     .row {
+//       padding: none;
+//     }
+//   }
+// }
 
-  @include mq(
-    $min-device-width: $min,
-    $max-device-width: $max,
-    $orientation: $orientation,
-    $-webkit-device-pixel-ratio: $pixel-ratio
-  ) {
-    .todo-list {
-      background-color: white;
-      margin: auto;
-      width: 80%;
-    }
-    .row {
-      padding: none;
-    }
-  }
-}
+// // --- iphone6 plus ------------------------------------------------------------
 
-// --- ipad (all) --------------------------------------------------------------
+// @mixin iphone6-plus($orientation: false) {
+//   $min: 414px;
+//   $max: 736px;
+//   $pixel-ratio: 3;
 
-@mixin ipad($orientation: false) {
-  $min: 768px;
-  $max: 1024px;
+//   @include mq(
+//     $min-device-width: $min,
+//     $max-device-width: $max,
+//     $orientation: $orientation,
+//     $-webkit-device-pixel-ratio: $pixel-ratio
+//   ) {
+//     .todo-list {
+//       background-color: white;
+//       margin: auto;
+//       width: 80%;
+//     }
+//     .row {
+//       padding: none;
+//     }
+//   }
+// }
 
-  @include mq(
-    $min-device-width: $min,
-    $max-device-width: $max,
-    $orientation: $orientation
-  ) {
-    .todo-list {
-      background-color: white;
-      margin: auto;
-      width: 80%;
-    }
-    .row {
-      padding: none;
-    }
-  }
-}
+// // --- ipad (all) --------------------------------------------------------------
 
-// --- ipad-retina -------------------------------------------------------------
+// @mixin ipad($orientation: false) {
+//   $min: 768px;
+//   $max: 1024px;
 
-@mixin ipad-retina($orientation: false) {
-  $min: 768px;
-  $max: 1024px;
-  $pixel-ratio: 2;
+//   @include mq(
+//     $min-device-width: $min,
+//     $max-device-width: $max,
+//     $orientation: $orientation
+//   ) {
+//     .todo-list {
+//       background-color: white;
+//       margin: auto;
+//       width: 80%;
+//     }
+//     .row {
+//       padding: none;
+//     }
+//   }
+// }
 
-  @include mq(
-    $min-device-width: $min,
-    $max-device-width: $max,
-    $orientation: $orientation,
-    $-webkit-device-pixel-ratio: $pixel-ratio
-  ) {
-    .todo-list {
-      background-color: white;
-      margin: auto;
-      width: 80%;
-    }
-    .row {
-      padding: none;
-    }
-  }
-}
+// // --- ipad-retina -------------------------------------------------------------
 
-// --- orientation -------------------------------------------------------------
+// @mixin ipad-retina($orientation: false) {
+//   $min: 768px;
+//   $max: 1024px;
+//   $pixel-ratio: 2;
 
-@mixin landscape() {
-  @include mq($orientation: landscape) {
-    .todo-list {
-      background-color: white;
-      margin: auto;
-      width: 80%;
-    }
-    .row {
-      padding: none;
-    }
-  }
-}
+//   @include mq(
+//     $min-device-width: $min,
+//     $max-device-width: $max,
+//     $orientation: $orientation,
+//     $-webkit-device-pixel-ratio: $pixel-ratio
+//   ) {
+//     .todo-list {
+//       background-color: white;
+//       margin: auto;
+//       width: 80%;
+//     }
+//     .row {
+//       padding: none;
+//     }
+//   }
+// }
 
-@mixin portrait() {
-  @include mq($orientation: portrait) {
-    .todo-list {
-      background-color: white;
-      margin: auto;
-      width: 80%;
-    }
-    .row {
-      padding: none;
-    }
-  }
-}
+// // --- orientation -------------------------------------------------------------
+
+// @mixin landscape() {
+//   @include mq($orientation: landscape) {
+//     .todo-list {
+//       background-color: white;
+//       margin: auto;
+//       width: 80%;
+//     }
+//     .row {
+//       padding: none;
+//     }
+//   }
+// }
+
+// @mixin portrait() {
+//   @include mq($orientation: portrait) {
+//     .todo-list {
+//       background-color: white;
+//       margin: auto;
+//       width: 80%;
+//     }
+//     .row {
+//       padding: none;
+//     }
+//   }
+// }
 
 @mixin linearGradient($top, $bottom) {
   background: $top; /* Old browsers */
