--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
-
 body {
   background-color: green;
   margin: 0;
@@ -40,8 +38,7 @@ body {
   /* padding: 30px 20px 0; */
   // width: 100%;
   border-bottom: 1px solid #cecece;
-  font-family: "Pacifico", cursive;
-  /* Roboto, sans-serif; */
+  font-family: sans-serif;
   font-weight: 100;
   font-size: 15px;
   color: #333333;
@@ -76,9 +73,8 @@ input[type="checkbox"]:focus {
   margin-top: -85px;
 }
 div.row {
-  align-items:center;
+  align-items: center;
   min-width: 300px;
-  font-family: "Pacifico", cursive;
 }
 @mixin linearGradient($top, $bottom) {
   background: $top; /* Old browsers */
